[JSC] The prototype cycle checks throws the wrong error type https://bugs.webkit.org/show_bug.cgi?id=159393

Patch by Benjamin Poulain <bpoulain@apple.com> on 2016-07-05
Reviewed by Geoffrey Garen.

Source/JavaScriptCore:

We were supposed to throw the TypeError:
-https://tc39.github.io/ecma262/#sec-set-object.prototype.__proto__

* runtime/JSObject.cpp:
(JSC::JSObject::setPrototypeWithCycleCheck):

LayoutTests:

* js/cyclic-prototypes-expected.txt:
* js/script-tests/cyclic-prototypes.js:
(catch):

Canonical link: https://commits.webkit.org/177563@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202832 268f45cc-cd09-0410-ab3c-d52691b4dbfc