LayoutTests/js/script-tests/cyclic-prototypes.js
@@ -7,8 +7,23 @@ var o3 = { p3: 3 };
 o3.__proto__ = o2;
 
 // Try to create a cyclical prototype chain.
-shouldThrow("o1.__proto__ = o3;");
-shouldThrow("Object.setPrototypeOf(o1, o3)");
+shouldThrow("o1.__proto__ = o3;", "'TypeError: cyclic __proto__ value'");
+shouldThrow("Object.setPrototypeOf(o1, o3)", "'TypeError: cyclic __proto__ value'");
+var globalException;
+try {
+    o1.__proto__ = o3;
+} catch (e) {
+    globalException = e;
+}
+shouldBe("globalException.constructor", "TypeError");
+
+globalException = undefined;
+try {
+    Object.setPrototypeOf(o1, o3);
+} catch (e) {
+    globalException = e;
+}
+shouldBe("globalException.constructor", "TypeError");
 
 // This changes __proto__ setter behaviour, since __proto__ is an accessor on Object.prototype.
 o1.__proto__ = null;
